# mini-cached-grep

./: .gitignore  CMakeLists.txt  README.md  test.txt
inc/: Cache.hpp  FileBuffer.hpp  Searcher.hpp
src/: Cache.cpp  FileBuffer.cpp  Searcher.cpp  main.cpp
